--- a/index.qmd
+++ b/index.qmd
@@ -7,7 +7,7 @@ resources:
   - img/wp15410183.png
 format:
   html:
-    css: "./index.scss"
+    css: "index.css"
 ---
 
 ::: {style="color: white;"}
